New ignores. Where did all these files come from?!

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ saves/calamity/advancements/
 saves/calamity/data/scoreboard\.dat
 
 saves/calamity/mcedit_waypoints\.dat
+
+hs_err_pid16116\.log
+
+resourcepacks/assets/
+
+saves/calamity_old/
+resourcepacks/f81517ca516363c381528480bb4c5189-New Default Betapack V2\.zip
+
+saves/calamity/textures\.pdn
