--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 *
 
-!saves/calamity/data/functions/
+!saves/calamity/data/functions/*
 
 !saves/calamity/region/r.0.0.mca
 
-!saves/calamity/structures
+!saves/calamity/structures/*
 
 !saves/calamity/icon.png
 
 !saves/calamity/level.dat
 
-!resourcepacks/calamity/
+!resourcepacks/calamity/*
 
 !README.md
