--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ saves/calamity/playerdata/
 saves/calamity/level\.dat_old
 
 saves/calamity/icon\.png
+
+crash-reports/
+
+saves/calamity/DIM-1/poi/
+
+saves/calamity/poi/
+
+screenshots/
