Ignoring other dimensions.

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,10 @@ saves/calamity/icon\.png
 
 crash-reports/
 
-saves/calamity/DIM-1/poi/
-
 saves/calamity/poi/
 
 screenshots/
+
+saves/calamity/DIM-1/
+
+saves/calamity/DIM1/
