Ignoring secret map and other stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
 crash-reports/
-
 logs/
-
 options\.txt
-
 realms_persistence\.json
-
 saves/calamity/advancements/
-
 saves/calamity/data/
-
 saves/calamity/DIM-1/
 saves/calamity/DIM1/
-
 saves/calamity/icon\.png
-
 saves/calamity/level\.dat_old
-
 saves/calamity/playerdata/
-
 saves/calamity/poi/
-
 saves/calamity/region/r.1.1.mca
 saves/calamity/region/r\.-1\.-1\.mca
 saves/calamity/region/r\.-1\.0\.mca
@@ -29,15 +18,31 @@ saves/calamity/region/r\.0\.-1\.mca
 saves/calamity/region/r\.0\.1\.mca
 saves/calamity/region/r\.1\.-1\.mca
 saves/calamity/region/r\.1\.0\.mca
-
 saves/calamity/session\.lock
-
 saves/calamity/stats/
 
-screenshots/
+saves/Undecided/advancements/
+saves/Undecided/data/
+saves/Undecided/DIM-1/
+saves/Undecided/DIM1/
+saves/Undecided/icon\.png
+saves/Undecided/level\.dat_old
+saves/Undecided/playerdata/
+saves/Undecided/poi/
+saves/Undecided/region/r.1.1.mca
+saves/Undecided/region/r\.-1\.-1\.mca
+saves/Undecided/region/r\.-1\.0\.mca
+saves/Undecided/region/r\.-1\.1\.mca
+saves/Undecided/region/r\.0\.-1\.mca
+saves/Undecided/region/r\.0\.1\.mca
+saves/Undecided/region/r\.1\.-1\.mca
+saves/Undecided/region/r\.1\.0\.mca
+saves/Undecided/session\.lock
+saves/Undecided/stats/
 
+screenshots/
+servers.dat
+servers.dat_old
 usercache\.json
 
-servers.dat
-
-servers.dat_old
+saves/Undecided/
