Will no longer ignore regions which load anyways

--- a/.gitignore
+++ b/.gitignore
@@ -10,63 +10,17 @@ saves/calamity/icon\.png
 saves/calamity/level\.dat_old
 saves/calamity/playerdata/
 saves/calamity/poi/
-saves/calamity/region/r.1.1.mca
-saves/calamity/region/r\.-1\.-1\.mca
-saves/calamity/region/r\.-1\.0\.mca
-saves/calamity/region/r\.-1\.1\.mca
-saves/calamity/region/r\.0\.-1\.mca
-saves/calamity/region/r\.0\.1\.mca
-saves/calamity/region/r\.1\.-1\.mca
-saves/calamity/region/r\.1\.0\.mca
 saves/calamity/session\.lock
 saves/calamity/stats/
-
-saves/Undecided/advancements/
-saves/Undecided/data/
-saves/Undecided/DIM-1/
-saves/Undecided/DIM1/
-saves/Undecided/icon\.png
-saves/Undecided/level\.dat_old
-saves/Undecided/playerdata/
-saves/Undecided/poi/
-saves/Undecided/region/r.1.1.mca
-saves/Undecided/region/r\.-1\.-1\.mca
-saves/Undecided/region/r\.-1\.0\.mca
-saves/Undecided/region/r\.-1\.1\.mca
-saves/Undecided/region/r\.0\.-1\.mca
-saves/Undecided/region/r\.0\.1\.mca
-saves/Undecided/region/r\.1\.-1\.mca
-saves/Undecided/region/r\.1\.0\.mca
-saves/Undecided/session\.lock
-saves/Undecided/stats/
-
 screenshots/
+server-resource-packs/
 servers.dat
 servers.dat_old
 usercache\.json
-
-saves/Undecided/
-
-saves/banned-ips.json
-
-saves/banned-players.json
-
-saves/eula.txt
-
-saves/ops.json
-
-saves/server.jar
-
-saves/server.properties
-
-saves/whitelist.json
-
-server-resource-packs/
-saves/plugins/
-saves/bukkit.yml
-saves/commands.yml
-saves/help.yml
-saves/permissions.yml
-saves/spigot-1.16.5.jar
-saves/spigot.yml
-saves/wepif.yml
+/saves/eula.txt
+/saves/ops.json
+/saves/server.jar
+/saves/server.properties
+/saves/whitelist.json
+/saves/banned-ips.json
+/saves/banned-players.json
